feat: new button and new ipsun

--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     <main>
         <div id="card">
             <h1>Cursos de DevOps</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas, voluptate.</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati mollitia minus dignissimos alias molestiae at soluta, pariatur voluptas deleniti non magni velit adipisci itaque distinctio sequi deserunt, repellendus libero. Aspernatur!</p>
+            <button>Saiba mais</button>
         </div>
     </main>
 </body>
