feat: dark mode btn

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 </head>
 <body>
     <main>
+        <header>
+            <button>dark mode</button>
+        </header>
         <div id="card">
             <h1>Cursos de DevOps</h1>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati mollitia minus dignissimos alias molestiae at soluta, pariatur voluptas deleniti non magni velit adipisci itaque distinctio sequi deserunt, repellendus libero. Aspernatur!</p>
