feat: adiciona o header no style
feat: adiciona cor rosa no header

feat: estrutura atualizada

--- a/index.html
+++ b/index.html
@@ -1,21 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
+
+    <header>
+        <button>dark mode</button>
+    </header>
+
     <main>
-        <header>
-            <button>dark mode</button>
-        </header>
         <div id="card">
             <h1>Cursos de DevOps</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati mollitia minus dignissimos alias molestiae at soluta, pariatur voluptas deleniti non magni velit adipisci itaque distinctio sequi deserunt, repellendus libero. Aspernatur!</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati mollitia minus dignissimos alias
+                molestiae at soluta, pariatur voluptas deleniti non magni velit adipisci itaque distinctio sequi
+                deserunt, repellendus libero. Aspernatur!</p>
             <button>Saiba mais</button>
         </div>
     </main>
+    
 </body>
+
 </html>
